<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyConbook</string>
    <string name="conname">Convention Name</string>
    <string name="schedule">Schedule</string>
    <string name="guide">Guides</string>
    <string name="guidedetail">Detailed information</string>
    <string name="coninfo">Con Info</string>
    <string name="dealers">Dealers</string>
    <string name="buildingmaps">Hotel Maps</string>
    <string name="areamap">Area Map</string>
    <string name="scheduledaypick">Select a day</string>
    <string name="conschedule">Convention schedule</string>
    <string name="sortname">Sort by name</string>
    <string name="sorttime">Sort by time</string>
    <string name="sortroom">Sort by room</string>
    <string name="sortgroup">Sort by category</string>
    <string name="reload">Reload</string>
    <string name="addtocalendar">Add to calendar</string>
    <string name="showmap">Show map</string>
    <string name="about">About</string>
    <string name="aboutinfo">MyConbook - Where your conbook and phone collide</string>
    <string name="supporttext">Support is available by contacting\nmyconbook@gmail.com\n\nor follow us on Twitter at\nhttp://twitter.com/myconbook</string>
    <string name="email">myconbook@gmail.com</string>
    <string name="guidedisclaimer">Report a problem</string>
    <string name="guideselect">Select a guide</string>
    <string name="restaurantguide">Restaurants</string>
    <string name="barguide">Bars</string>
    <string name="storeguide">Stores</string>
    <string name="atmguide">Bank/ATMs</string>
    <string name="hotels">Hotels</string>
    <string name="conventioninfo">Convention Info</string>
    <string name="filtercategory">Filter by category</string>
    <string name="filter">Filter</string>
    <string name="clear">Clear</string>
    <string name="filterhint">Enter text to search</string>
    <string name="noresults">No items found.</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="placeholder">Placeholder</string>
    <string name="locationhours">Location hours</string>
    <string name="todays_hours">Today's hours: </string>
    <string name="thursdayColon">Thursday:</string>
    <string name="fridayColon">Friday:</string>
    <string name="saturdayColon">Saturday:</string>
    <string name="sundayColon">Sunday:</string>
    <string name="closed">Closed</string>
    <string name="brackets_closed"> [Closed]</string>
    <string name="unknown">Unknown</string>
    <string name="dollars_one">$</string>
    <string name="dollars_two">$$</string>
    <string name="dollars_three">$$$</string>
    <string name="dollars_four">$$$$</string>
    <string name="dollars_five">$$$$$</string>
    <string name="not_available">Mot available</string>
    <string name="hotel_info">Hotel info</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name-"dealers_room">Dealer's room</string>
    <string name="show_open_now">Show open now</string>
    <string name="activity_not_found">Could not find an application to handle the request.</string>
    <string name="all_categories"> --- All --- </string>
    <string name="call_number">Call </string>
    <string name="open_in_maps">Open in Google Maps</string>
    <string name="close">Close</string>
    <string name="con_no_guide_feature">This convention does not support the guide feature.</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="no_conventions_listed">No conventions are currently listed.</string>
    <string name="new_version_available">A new version of MyConbook is available. Do you want to go to the Play Store to upgrade?</string>
    <string name="no_description">(No description given)</string>
    <string name="details_category">Category: </string>
    <string name="fetching_con_list">Fetching convention list...</string>
    <string name="fetching_con_data">Fetching convention data...</string>
    <string name="row_call_number">Call </string>
    <string name="row_category">Category</string>
    <string name="row_rating">Rating</string>
    <string name="rating_stars"> stars</string>
    <string name="row_cost">Cost</string>
    <string name="row_has_delivery">Has delivery</string>
    <string name="row_comments">Review/comments</string>
    <string name="open_webste">Open website</string>
    <string name="open_yelp">Open on Yelp</string>
    <string name="not_found_on_maps">This location could not be found in Google Maps.</string>
    <string name="not_found_on_maps_closed">This location could not be found in Google Maps, and may be closed.</string>
    <string name="not_found_on_maps_verified_open">This location could not be found in Google Maps, but it was verified to be open by MyConbook.</string>
    <string name="location_not_found">Location not found</string>
    <string name="location_may_be_closed">Location may be closed</string>
    <string name="location_may_be_closed_message">This location was marked as closed according to Google, but was still in the conbook. It may or may not still be open.</string>
    <string name="continue">Continue</string>
    <string name="unable_to_launch_maps">Unable to launch Google Maps.</string>
    <string name="cant_open_link">Unable to launch browser for link </string>
    <string name="report_problem">Report a problem</string>
    <string name="send_mail">Send mail</string>
    <string name="downloading_db">Downloading new database...</string>
    <string name="downloading_maps">Downloading new maps...</string>
    <string name="error_database_not_loaded">The database could not be loaded.</string>
    <string name="error_reload_db">Error: Reload DB!</string>
    <string name="error_no_data_loaded">Error: No data was loaded.</string>
    <string name="support_info">Support information\nDatabase build date:\n</string>
</resources>