<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <Spinner
        android:id="@+id/con_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:spinnerMode="dropdown"
        android:visibility="visible" />

    <TextView
        android:id="@+id/schedule_button"
        style="@style/NavDrawer.Item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_menu_my_calendar"
        android:text="@string/schedule" />

    <TextView
        android:id="@+id/guide_button"
        style="@style/NavDrawer.Item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_menu_directions"
        android:text="@string/guide" />

    <TextView
        android:id="@+id/con_info_button"
        style="@style/NavDrawer.Item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_menu_agenda"
        android:text="@string/coninfo" />

    <TextView
        android:id="@+id/dealers_button"
        style="@style/NavDrawer.Item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_menu_allfriends"
        android:text="@string/dealers" />

    <TextView
        android:id="@+id/building_maps_button"
        style="@style/NavDrawer.Item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_menu_mapmode"
        android:text="@string/buildingmaps" />

    <TextView
        android:id="@+id/area_map_button"
        style="@style/NavDrawer.Item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_menu_myplaces"
        android:text="@string/areamap" />

</LinearLayout>